Made Navbar 'sticky' (fixes #14) and center align slide navigation for team

--- a/src/overrides.css
+++ b/src/overrides.css
@@ -7,6 +7,14 @@
 
 .fp-slidesNav.fp-bottom {
     bottom: 100px;
+    width: 200px;
+    margin: auto;
+    padding: auto;
+}
+
+.fp-slidesNav.fp-bottom ul {
+    width: fit-content;
+    margin: auto;
 }
 
 #fp-nav ul li:hover a.active span, 
